# learning-python

./: .gitignore  README.md
applications/: application.md
applications/FastAPI/: FastAPI.ipynb  FastAPI.md
applications/Flask/: Flask.ipynb  Flask.md
books/: Python in a Nutshell.md  books.md
books/Fluent Python/: Fluent Python.md
books/fluent-python/: README.md  pyproject.toml
books/fluent-python/src/: common.py
books/fluent-python/src/classes_and_protocols/: books.py  diamond.py  double_protocol.py  frechdeck2.py  mixin.py  mymax.py  mysum.py  pixel.py  random_pick_protocol.py  tombola_abc.py  tombola_generic.py  variance.py  vector.py  vector2d.py
books/fluent-python/src/control_flow/: generators.py
books/fluent-python/src/data_structures/: card_deck.py  lis.py  sequences.py  vector2d.py
books/fluent-python/src/function_as_objects/: birds.py  decorators.py  function_design_patterns.py
books/fluent-python/src/metaprogramming/: descriptor_kind.py  descriptors.py  osconfeed.py  prop_del.py  prop_factory.py  prop_validate.py
books/fluent-python/tests/: __init__.py  test_concurency.py  test_numpy.py  test_str.py
books/fluent-python/tests/classes_and_protocols/: __init__.py  test_inheritance.py  test_iterface_procotols_abc.py  test_more_type_hints.py  test_operator_overloading.py  test_pythonic_object.py  test_sequence_special_methods.py
books/fluent-python/tests/control_flow/: __init__.py  test_async.py  test_concurrency_model.py  test_concurrent_executors.py  test_iterator_generator_coroutine.py  test_with_match_else.py
books/fluent-python/tests/data_structures/: __init__.py  test_card_deck.py  test_data_class_builders.py  test_dict_set.py  test_object_references.py  test_sequences.py  test_text_bytes.py  test_vector2d.py
books/fluent-python/tests/function_as_objects/: __init__.py  test_decorators.py  test_function_design_patterns.py  test_function_type_hint.py  test_functions.py
books/fluent-python/tests/metaprogramming/: __init__.py  osconfeed.json  test_attr_descriptors.py  test_class_metaprog.py  test_dynamic_attrs_props.py
language/: PEP.ipynb  PEP.md  asyncio.md  language.md  python.uxf  std.md
tools/: Black.md  Celery.md  Faker.md  IPython.md  Jinja.md  Jupyter.md  Pipenv.md  Poetry.md  PyDoc.md  PyScaffold.md  SQLAlchemy.ipynb  Uvicorn.md  autopep8.md  cookiecutter.md  mypy.md  pip.md  pipx.md  protobuf.ipynb  pycodestyle.md  pytest.md  tools.md  tox.md  uv.md  virtualenv.md
tools/cookiecutter/python-sample/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
tools/cookiecutter/python-sample/.github/: ISSUE_TEMPLATE.md
tools/cookiecutter/python-sample/docs/: index.md  installation.md  usage.md
tools/cookiecutter/python-sample/src/python_sample/: __init__.py  __main__.py  cli.py  python_sample.py
tools/cookiecutter/python-sample/tests/: __init__.py  test_python_sample.py
tools/poetry/poetry-sample/: pyproject.toml
tools/poetry/poetry-sample/src/: main.py
tools/poetry/poetry-sample/src/poetry_sample/: __init__.py  sample.py
(+287 files in other folders)
