[project]
name = "poetry-sample"
version = "0.1.0"
description = ""
authors = [{ name = "jargonzhou", email = "zhoujiagen@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pendulum (>=3.1.0,<4.0.0)"]

[tool.poetry]
packages = [{ include = "poetry_sample", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
